--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -5,13 +5,21 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>#</th>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="9"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @experiments.each do |experiment| %>
       <tr>
+        <td><%= experiment.id %></td>
+        <td><%= experiment.title %></td>
+        <td><%= experiment.body %></td>
+
+
         <td><%= link_to 'Show', experiment %></td>
         <td><%= link_to 'Edit', edit_experiment_path(experiment) %></td>
         <td><%= link_to 'Destroy', experiment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
