--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -31,3 +31,17 @@
 <br>
 
 <%= link_to 'New Experiment', new_experiment_path %>
+
+////
+
+using cards
+<hr>
+<div class="card">
+      <div class="card-block">
+        <% @experiments.each do |experiment| %>
+            <h4 class="card-title"><%= experiment.title %></h4>
+            <p class="card-text"><%= experiment.body %></p>
+            <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(experiment.created_at) %> ago</small></p>
+          <% end %>
+      </div>
+    </div>
