add some theme styles... still needs some love but right direction

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,10 @@
-// Custom bootstrap variables must be set or imported *before* bootstrap.
-@import "bootstrap";
+// Import Experiment Specific styles
+@import "experiments";
 
 // Override Boostrap variables
 @import "bootstrap/variables";
+
+
+
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
