--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+    <div class="container">
+      <div class="py-5">
+        <%= yield %>
+        <h1>Bootstrap 4 Theme</h1>
+        <p>
+          This is minimal Bootstrap 4 Starter template.
+        </p>
+
+        <a href="#!" class="btn btn-primary">Default Button</a>
+
+        <a href="#!" class="btn btn-outline-primary">Outline Button</a>
+      </div>
+    </div>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    </body>
 </html>
