--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,47 +1,17 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Experiments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="9"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @experiments.each do |experiment| %>
-      <tr>
-        <td><%= experiment.id %></td>
-        <td><%= experiment.title %></td>
-        <td><%= experiment.body %></td>
-
-
-        <td><%= link_to 'Show', experiment %></td>
-        <td><%= link_to 'Edit', edit_experiment_path(experiment) %></td>
-        <td><%= link_to 'Destroy', experiment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<h1>Experiment Index Placeholder</h1>
 
 <%= link_to 'New Experiment', new_experiment_path %>
-
-////
-
-using cards
 <hr>
-<div class="card">
-      <div class="card-block">
-        <% @experiments.each do |experiment| %>
-            <h4 class="card-title"><%= experiment.title %></h4>
-            <p class="card-text"><%= experiment.body %></p>
-            <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(experiment.created_at) %> ago</small></p>
-          <% end %>
-      </div>
-    </div>
+  <div class="card-deck">
+   <% @experiments.reverse.each do |experiment| %>
+     <div class="card">
+       <div class="card-block">
+         <h4 class="card-title"><%= experiment.title %></h4>
+         <p class="card-text"><%= experiment.body %></p>
+         <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(experiment.created_at) %> ago</small></p>
+         <a href="#" class="btn btn-primary">View</a>
+       </div>
+     </div>
+   <% end %>
+</div>
