--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -6,11 +6,16 @@
   <div class="card-deck">
    <% @experiments.reverse.each do |experiment| %>
      <div class="card">
-       <div class="card-block">
-         <h4 class="card-title"><%= experiment.title %></h4>
-         <p class="card-text"><%= experiment.body %></p>
-         <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(experiment.created_at) %> ago</small></p>
-         <a href="#" class="btn btn-primary">View</a>
+       <div class="p-1">
+
+           <div class="card-block">
+             <h4 class="card-title"><%= experiment.title %></h4>
+             <p class="card-text"><%= experiment.body %></p>
+             <p class="card-text"><small class="text-muted">Created: <%= time_ago_in_words(experiment.created_at) %> ago</small></p>
+             <p class="card-text"><small class="text-muted">Last updated: <%= time_ago_in_words(experiment.updated_at) %> ago</small></p>
+             <%= link_to "View", experiment_path(experiment.id) %>
+           </div>
+
        </div>
      </div>
    <% end %>
