--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,12 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h1>This is experiment # <%= @experiment.id %></h1>
+
+<h2>
   <strong>Title:</strong>
   <%= @experiment.title %>
-</p>
+</h2>
 
-<p>
+<h3>
   <strong>Body:</strong>
+</h3>
+<p>
   <%= @experiment.body %>
 </p>
 
