--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Welcome Index Placeholder text....alooooha!</h1>
+
+
+<%= button_to "Experiments", experiments_path, :class => "btn btn-primary" %>
