--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,3 @@
-// Import Experiment Specific styles
-@import "experiments";
-
-// Override Boostrap variables
-@import "bootstrap/variables";
-
-
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
-@import "bootstrap";
+@import "welcome";
