--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,54 @@
-// Place all the styles related to the Welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+//colors
+$color_mountain_mist_approx: #999;
+$black_60: rgba(0,0,0,0.6);
+$white: #fff;
+
+//fonts
+$font_0: exo;
+$font_1: sans-serif;
+
+//urls
+$url_0: url(http://ppcdn.500px.org/75319705/1991f76c0c6a91ae1d23eb94ac5c7a9f7e79c480/2048.jpg);
+
+//@extend-elements
+//original selectors
+//div, body
+%extend_1 {
+	margin: 0;
+	padding: 0;
+	font-family: $font_0, $font_1;
+}
+
+
+html {
+	height: 100%;
+}
+body {
+	height: 100%;
+	background-image: $url_0;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-color: $color_mountain_mist_approx;
+	@extend %extend_1;
+}
+div {
+	@extend %extend_1;
+}
+.wrapper {
+	height: 100%;
+	width: 100%;
+}
+.message {
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: border-box;
+	width: 100%;
+	height: 45%;
+	bottom: 0;
+	display: block;
+	position: absolute;
+	background-color: $black_60;
+	color: $white;
+	padding: 0.5em;
+}
